--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,12 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" th:href="@{/index}">Главная <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#">Регистрация</a>
+                <a class="nav-item nav-link">
+                    <span th:text="${user}"></span>
+                </a>
+                <a class="nav-item nav-link">
+                    <span> | Выйти</span>
+                </a>
             </div>
         </div>
     </nav>
