--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,33 +43,29 @@
             <thead>
             <tr>
                 <th scope="col">#</th>
+                <th scope="col">Имя</th>
+                <th scope="col">Описание</th>
                 <th scope="col">Адрес</th>
-                <th scope="col">Номер машины</th>
-                <th scope="col">Описание нарушения</th>
-                <th scope="col">Фотография</th>
             </tr>
             </thead>
             <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td>ул. Нарушительская</td>
-                <td>A777LOL</td>
+                <td>Петр</td>
                 <td>Проехал на красный</td>
-                <td>ЗДЕСЬ ФОТО</td>
+                <td>ул. Пшеничная 7</td>
             </tr>
             <tr>
                 <th scope="row">2</th>
-                <td>ул. Машинная</td>
-                <td>B001POP</td>
-                <td>Не пропустил пешехода</td>
-                <td>ЗДЕСЬ ФОТО</td>
+                <td>Петр</td>
+                <td>Проехал на красный</td>
+                <td>ул. Пшеничная 7</td>
             </tr>
             <tr>
                 <th scope="row">3</th>
-                <td>ул. Кольцевая</td>
-                <td>C888SAD</td>
-                <td>Сбил человека на светофоре</td>
-                <td>ЗДЕСЬ ФОТО</td>
+                <td>Петр</td>
+                <td>Проехал на красный</td>
+                <td>ул. Пшеничная 7</td>
             </tr>
             </tbody>
         </table>
