--- a/src/main/resources/templates/editAccident.html
+++ b/src/main/resources/templates/editAccident.html
@@ -44,6 +44,19 @@
                         <label for="address">Адрес</label>
                         <input th:field="*{address}" type="text" class="form-control" name="address" id="address">
                     </div>
+                    <div class="form-group">
+                        <label for="type.id">Тип</label>
+                        <select th:field="*{type.id}"
+                                class="form-control"
+                                id="type.id" name="type.id">
+                            <option value="0"></option>
+                            <option th:each="type: ${types}"
+                                    th:text="${type.name}"
+                                    th:value="${type.id}"
+                                    th:required="true">
+                            </option>
+                        </select>
+                    </div>
                     <button type="submit" class="btn btn-primary mt-3">Сохранить</button>
                 </form>
             </div>
