--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,31 +42,21 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">Имя</th>
-                <th scope="col">Описание</th>
-                <th scope="col">Адрес</th>
+                <th class="col-3">Заявка</th>
+                <th class="col-3">Текст</th>
+                <th class="col-3">Адрес</th>
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Петр</td>
-                <td>Проехал на красный</td>
-                <td>ул. Пшеничная 7</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Петр</td>
-                <td>Проехал на красный</td>
-                <td>ул. Пшеничная 7</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Петр</td>
-                <td>Проехал на красный</td>
-                <td>ул. Пшеничная 7</td>
-            </tr>
+                <tr th:each="accident: ${accidents}">
+                    <td th:text="${accident.name}"></td>
+                    <td th:text="${accident.text}"></td>
+                    <td th:text="${accident.address}"></td>
+                    <td>
+                        <a th:href="@{|/updateAccidentForm/id=${accident.id}|}">
+                            <i class="fa fa-edit"></i></a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
