--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,11 +29,8 @@
                 <a class="nav-item nav-link" href="#">Главная</a>
                 <a class="nav-item nav-link" th:href="@{/accidents}">Инциденты</a>
                 <a class="nav-item nav-link active" th:href="@{/@{/createAccidentForm}}">Добавить Инцидент</a>
-                <a class="nav-item nav-link">
-                    <span th:text="${user}"></span>
-                </a>
-                <a class="nav-item nav-link">
-                    <span> | Выйти</span>
+                <a class="nav-link p-2 ml-auto" th:href="@{/logout}">
+                    <span>Выйти</span>
                 </a>
             </div>
         </div>
