--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,6 +29,9 @@
                 <a class="nav-item nav-link" href="#">Главная</a>
                 <a class="nav-item nav-link" th:href="@{/accidents}">Инциденты</a>
                 <a class="nav-item nav-link active" th:href="@{/@{/createAccidentForm}}">Добавить Инцидент</a>
+                <div>
+                    Login as : ${user.username}
+                </div>
                 <a class="nav-link p-2 ml-auto" th:href="@{/logout}">
                     <span>Выйти</span>
                 </a>
